--- a/transforms/ri/ocri/r70/gov.ri.code.title.03.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.03.html
@@ -7372,9 +7372,9 @@
        <p>
         Provisions relating to issuance of retailers Class A licenses were not unconstitutional under provisions of former
         <cite class="ocri">
-         R.I. Const., Art. IV, § 10
+         R.I. Const., Art. IV
         </cite>
-        , relating to legislative power of general assembly. C. Tisdall Co. v. Board of Aldermen,
+        , § 10, relating to legislative power of general assembly. C. Tisdall Co. v. Board of Aldermen,
         <cite class="ocri">
          57 R.I. 96
         </cite>
@@ -7573,9 +7573,9 @@
        <p>
         Provisions relating to retailer’s Class A licenses were not unconstitutional under provisions of former
         <cite class="ocri">
-         R.I. Const., Art. IV, § 10
+         R.I. Const., Art. IV
         </cite>
-        , relating to legislative power of general assembly. C. Tisdall Co. v. Board of Aldermen,
+        , § 10, relating to legislative power of general assembly. C. Tisdall Co. v. Board of Aldermen,
         <cite class="ocri">
          57 R.I. 96
         </cite>
@@ -7841,13 +7841,16 @@
        <p>
         Provision for issuance of Class A liquor license to holders of Class E licenses did not violate Fourteenth Amendment of United States Constitution or former
         <cite class="ocri">
-         R.I. Const., Art. II, § 2
+         <cite class="ocri">
+          R.I. Const., Art. I
+         </cite>
+         I
         </cite>
-        or Art. IV, § 1 (see now
+        , § 2 or Art. IV, § 1 (see now
         <cite class="ocri">
-         R.I. Const., Art. I, Sec. 2
+         R.I. Const., Art. I
         </cite>
-        or Art. VI, Sec. 1), as such provision was a reasonable classification within the police power of state over the liquor traffic. Romano v. Daneker,
+        , Sec. 2 or Art. VI, Sec. 1), as such provision was a reasonable classification within the police power of state over the liquor traffic. Romano v. Daneker,
         <cite class="ocri">
          77 R.I. 61
         </cite>
