--- a/transforms/ri/ocri/r70/gov.ri.code.title.04.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.04.html
@@ -811,9 +811,9 @@
        <p>
         Offense provided by this section was not an infamous crime within the meaning of former
         <cite class="ocri">
-         R.I. Const., Art. I, § 7
+         R.I. Const., Art. I
         </cite>
-        , so as to require presentment or indictment. State v. Nichols,
+        , § 7, so as to require presentment or indictment. State v. Nichols,
         <cite class="ocri">
          27 R.I. 69
         </cite>
@@ -1960,9 +1960,9 @@
         </cite>
         was not an infamous crime within the meaning of former
         <cite class="ocri">
-         R.I. Const., Art. I, § 7
+         R.I. Const., Art. I
         </cite>
-        , and it was competent for the general assembly to vest jurisdiction of such offense in the district courts. State v. Nichols,
+        , § 7, and it was competent for the general assembly to vest jurisdiction of such offense in the district courts. State v. Nichols,
         <cite class="ocri">
          27 R.I. 69
         </cite>
@@ -4871,9 +4871,9 @@
         </cite>
         under former
         <cite class="ocri">
-         R.I. Const., Art. I, § 10
+         R.I. Const., Art. I
         </cite>
-        could not be questioned in a proceeding to enjoin the feeding of swill, as the constitutional provision applies only to criminal proceedings. Kane v. Lapre,
+        , § 10 could not be questioned in a proceeding to enjoin the feeding of swill, as the constitutional provision applies only to criminal proceedings. Kane v. Lapre,
         <cite class="ocri">
          69 R.I. 330
         </cite>
