--- a/transforms/ri/ocri/r70/gov.ri.code.title.07.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.07.html
@@ -1123,9 +1123,9 @@
        <p>
         Constitutional basis for general corporation laws,
         <cite class="ocri">
-         R.I. Const., Art. VI, § 14
+         R.I. Const., Art. VI
         </cite>
-        .
+        , § 14.
        </p>
        <p>
         Consumers’ cooperatives, application of corporation laws, §
@@ -8844,9 +8844,9 @@
          </cite>
          ) had already expired before the amendments allowing the five-year period went into effect; there was no retroactive application of former § 7-1.1-98.1 (see now this section), as that would have resulted in a due process violation of
          <cite class="ocri">
-          R.I. Const. art. I, § 2
+          R.I. Const. art. I
          </cite>
-         . Theta Props. v. Ronci Realty Co., 814 A.2d 907,
+         , § 2. Theta Props. v. Ronci Realty Co., 814 A.2d 907,
          <cite class="ocri">
           2003 R.I. LEXIS 30
          </cite>
