--- a/transforms/ri/ocri/r70/gov.ri.code.title.08.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.08.html
@@ -257,9 +257,9 @@
       <p>
        Compensation of judges,
        <cite class="ocri">
-        R.I. Const., art. X, § 6
+        R.I. Const., art. X
        </cite>
-       .
+       , § 6.
       </p>
       <p>
        Election and removal of judges,
@@ -271,9 +271,9 @@
       <p>
        Establishment of supreme court,
        <cite class="ocri">
-        R.I. Const., art. X, § 1
+        R.I. Const., art. X
        </cite>
-       .
+       , § 1.
       </p>
       <p>
        Exemption of judges from jury service, §
@@ -423,7 +423,11 @@
        et seq.
       </p>
       <p>
-       Constitutional jurisdiction and powers, R.I. Const., amend. XII.
+       Constitutional jurisdiction and powers,
+       <cite class="ocri">
+        R.I. Const., amend. XII
+       </cite>
+       .
       </p>
       <p>
        Contempt of court, §
@@ -888,7 +892,11 @@
         (1908).
        </p>
        <p>
-        The jurisdiction conferred upon the supreme court by R.I. Const., amend. XII is undoubtedly broad enough to include questions of law arising in a divorce case, the method of presenting such questions being by bill of exceptions. Thrift v. Thrift,
+        The jurisdiction conferred upon the supreme court by
+        <cite class="ocri">
+         R.I. Const., amend. XII
+        </cite>
+        is undoubtedly broad enough to include questions of law arising in a divorce case, the method of presenting such questions being by bill of exceptions. Thrift v. Thrift,
         <cite class="ocri">
          30 R.I. 357
         </cite>
@@ -1000,7 +1008,11 @@
         (1914).
        </p>
        <p>
-        Under the provisions of this section where a statute expressly gives original appellate jurisdiction to a court other than the supreme court, such original appellate jurisdiction is exclusive and not in conflict with R.I. Const., amend. XII, § 1, which gives the supreme court final revisory and appellate jurisdiction; and this final jurisdiction cannot be availed of until rights in the court of original appellate jurisdiction have been exhausted and its requirements met. MacKenzie &amp; Shea v. Rhode Island Hosp. Trust Co.,
+        Under the provisions of this section where a statute expressly gives original appellate jurisdiction to a court other than the supreme court, such original appellate jurisdiction is exclusive and not in conflict with
+        <cite class="ocri">
+         R.I. Const., amend. XII
+        </cite>
+        , § 1, which gives the supreme court final revisory and appellate jurisdiction; and this final jurisdiction cannot be availed of until rights in the court of original appellate jurisdiction have been exhausted and its requirements met. MacKenzie &amp; Shea v. Rhode Island Hosp. Trust Co.,
         <cite class="ocri">
          45 R.I. 407
         </cite>
@@ -1032,9 +1044,9 @@
         </cite>
         ; however, pursuant to
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 10
         </cite>
-        10, § 2, relief may be sought in the Rhode Island Supreme Court by way of a writ of certiorari. New Harbor Vill., LLC v. Town of New Shoreham Zoning Bd. of Review, 894 A.2d 901,
+        , § 2, relief may be sought in the Rhode Island Supreme Court by way of a writ of certiorari. New Harbor Vill., LLC v. Town of New Shoreham Zoning Bd. of Review, 894 A.2d 901,
         <cite class="ocri">
          2006 R.I. LEXIS 39
         </cite>
@@ -1127,11 +1139,15 @@
         (1923).
        </p>
        <p>
-        The supreme court has authority derived from R.I. Const., amend. XII (see now
+        The supreme court has authority derived from
         <cite class="ocri">
-         R.I. Const., art. X, § 2
+         R.I. Const., amend. XII
         </cite>
-        et seq.) to issue a prerogative writ of injunction, but such authority has never been conferred upon the superior court. Boss v. Sprague,
+        (see now
+        <cite class="ocri">
+         R.I. Const., art. X
+        </cite>
+        , § 2 et seq.) to issue a prerogative writ of injunction, but such authority has never been conferred upon the superior court. Boss v. Sprague,
         <cite class="ocri">
          53 R.I. 1
         </cite>
@@ -1551,7 +1567,11 @@
         </b>
        </h5>
        <p>
-        Mandamus will be available only when there is no other adequate remedy at law and justice can only be done by such mandamus; and R.I. Const., amend. XII and this section do not change this rule. Rowe v. Border City Garnetting Co.,
+        Mandamus will be available only when there is no other adequate remedy at law and justice can only be done by such mandamus; and
+        <cite class="ocri">
+         R.I. Const., amend. XII
+        </cite>
+        and this section do not change this rule. Rowe v. Border City Garnetting Co.,
         <cite class="ocri">
          40 R.I. 394
         </cite>
@@ -1662,7 +1682,11 @@
        </b>
       </h4>
       <p>
-       Advisory opinions, R.I. Const., amend. XII, § 2.
+       Advisory opinions,
+       <cite class="ocri">
+        R.I. Const., amend. XII
+       </cite>
+       , § 2.
       </p>
      </div>
      <div>
@@ -4468,11 +4492,15 @@
         </b>
        </h5>
        <p>
-        The clause giving the superior court concurrent jurisdiction with the supreme court to issue prerogative writs does not violate R.I. Const., amend. XII, granting power to the supreme court to issue prerogative writs (see now
+        The clause giving the superior court concurrent jurisdiction with the supreme court to issue prerogative writs does not violate
         <cite class="ocri">
-         R.I. Const., art. X, § 2
+         R.I. Const., amend. XII
         </cite>
-        et seq.), as C.P.A. 1905, § 328 (§
+        , granting power to the supreme court to issue prerogative writs (see now
+        <cite class="ocri">
+         R.I. Const., art. X
+        </cite>
+        , § 2 et seq.), as C.P.A. 1905, § 328 (§
         <cite class="ocri">
          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.09.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t09c24s9-24-1" target="_blank">
           9-24-1
@@ -7738,9 +7766,9 @@
       <p>
        Oath of office,
        <cite class="ocri">
-        R.I. Const., art. III, § 4
+        R.I. Const., art. III
        </cite>
-       .
+       , § 4.
       </p>
      </div>
     </div>
@@ -14242,9 +14270,9 @@
       <p>
        Judges’ oath of office,
        <cite class="ocri">
-        R.I. Const., art. III, § 4
+        R.I. Const., art. III
        </cite>
-       .
+       , § 4.
       </p>
      </div>
     </div>
@@ -23171,9 +23199,9 @@
        <p>
         Because an adoptee did not prove the existence of good cause for access to the adoption records and because deferring to the adoptee’s religious beliefs would be a preferential treatment by government, in violation of
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 3 and the First Amendment of the federal Constitution, the trial court properly denied the adoptee’s petition. In re Philip S., 881 A.2d 931,
+        , § 3 and the First Amendment of the federal Constitution, the trial court properly denied the adoptee’s petition. In re Philip S., 881 A.2d 931,
         <cite class="ocri">
          2005 R.I. LEXIS 185
         </cite>
