--- a/transforms/ri/ocri/r70/gov.ri.code.title.09.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.09.html
@@ -5703,9 +5703,9 @@
        <p>
         Subsection (b) violates
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 5 (remedies for wrongs). Burke v. Bayerische Motoren Werke Aktiengesellschaft, 471 A.2d 206,
+        , § 5 (remedies for wrongs). Burke v. Bayerische Motoren Werke Aktiengesellschaft, 471 A.2d 206,
         <cite class="ocri">
          1984 R.I. LEXIS 437
         </cite>
@@ -9609,9 +9609,9 @@
        <p>
         This section places a reasonable limit on the parties’ right to have their claims adjudicated by the courts and does not violate the open courts provision of
         <cite class="ocri">
-         R.I. Const., Art. I, § 5
+         R.I. Const., Art. I
         </cite>
-        . Dowd v. Rayner, 655 A.2d 679,
+        , § 5. Dowd v. Rayner, 655 A.2d 679,
         <cite class="ocri">
          1995 R.I. LEXIS 53
         </cite>
@@ -12353,9 +12353,12 @@
         </cite>
         (l), and not for lack of prosecution under
         <cite class="ocri">
-         R.I. Super. Ct. R. Civ. P. 4
+         <cite class="ocri">
+          R.I. Super. Ct. R. Civ. P. 4
+         </cite>
+         1
         </cite>
-        1(b), the plaintiff’s claim is protected by
+        (b), the plaintiff’s claim is protected by
         <cite class="ocri">
          R.I. Gen. Laws
         </cite>
@@ -14146,9 +14149,9 @@
        <p>
         This section does not violate
         <cite class="ocri">
-         R.I. Const., Art. I, § 5
+         R.I. Const., Art. I
         </cite>
-        , which guarantees access to the courts. Walsh v. Gowing, 494 A.2d 543,
+        , § 5, which guarantees access to the courts. Walsh v. Gowing, 494 A.2d 543,
         <cite class="ocri">
          1985 R.I. LEXIS 540
         </cite>
@@ -24745,9 +24748,9 @@
       <p>
        Right to vote,
        <cite class="ocri">
-        R.I. Const., art. II, § 1
+        R.I. Const., art. II
        </cite>
-       .
+       , § 1.
       </p>
       <p>
        Writs of arrest in civil cases, §
@@ -26343,9 +26346,9 @@
       <p>
        Constitutional guaranty as to truth as defense,
        <cite class="ocri">
-        R.I. Const., art. I, § 20
+        R.I. Const., art. I
        </cite>
-       .
+       , § 20.
       </p>
      </div>
      <div>
@@ -27364,9 +27367,9 @@
       <p>
        Qualified electors,
        <cite class="ocri">
-        R.I. Const., art. II, § 1
+        R.I. Const., art. II
        </cite>
-       .
+       , § 1.
       </p>
      </div>
      <div>
@@ -46548,9 +46551,9 @@
        <p>
         This section, which mandates 12 percent prejudgment interest in medical malpractice cases, is not unconstitutional under the due process clause of U.S. Const. amend. XIV, § 1 or
         <cite class="ocri">
-         R.I. Const. art. I, § 2
+         R.I. Const. art. I
         </cite>
-        . Oden v. Schwartz, 71 A.3d 438,
+        , § 2. Oden v. Schwartz, 71 A.3d 438,
         <cite class="ocri">
          2013 R.I. LEXIS 80
         </cite>
@@ -48061,9 +48064,9 @@
        <p>
         This section is not in violation of
         <cite class="ocri">
-         R.I. Const., Art. I, § 5
+         R.I. Const., Art. I
         </cite>
-        , since giving security for costs cannot be said to be a purchasing of justice. Conley v. Woonsocket Inst. for Sav.,
+        , § 5, since giving security for costs cannot be said to be a purchasing of justice. Conley v. Woonsocket Inst. for Sav.,
         <cite class="ocri">
          11 R.I. 147
         </cite>
@@ -48076,9 +48079,9 @@
        <p>
         Dismissal under this section in a case where the plaintiff is too poor to give surety would violate
         <cite class="ocri">
-         R.I. Const., Art. I, § 5
+         R.I. Const., Art. I
         </cite>
-        . Spalding v. Bainbridge,
+        , § 5. Spalding v. Bainbridge,
         <cite class="ocri">
          12 R.I. 244
         </cite>
@@ -66953,9 +66956,9 @@
        <p>
         In the exercise of its “plenary power” the general assembly may appropriate public funds for private purposes provided that the minimum-vote requirements set forth in
         <cite class="ocri">
-         R.I. Const., art. VI, § 11
+         R.I. Const., art. VI
         </cite>
-        are met. Kennedy v. State, 654 A.2d 708,
+        , § 11 are met. Kennedy v. State, 654 A.2d 708,
         <cite class="ocri">
          1995 R.I. LEXIS 43
         </cite>
