--- a/transforms/ri/ocri/r70/gov.ri.code.title.10.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.10.html
@@ -6564,9 +6564,9 @@
        <p>
         This section does not contain any provision for exigency, nor does it furnish any other significant safeguards to protect a defendant from bearing the brunt of the issuance of an ex parte writ of attachment. Accordingly, by failing to provide a preattachment hearing without at least requiring a showing of some exigent circumstance, this section clearly falls short of the demands of due process and violates the Fourteenth Amendment to the United States Constitution and
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 2, and a writ of attachment issued thereunder was, therefore, invalid. Shawmut Bank v. Costello, 643 A.2d 194,
+        , § 2, and a writ of attachment issued thereunder was, therefore, invalid. Shawmut Bank v. Costello, 643 A.2d 194,
         <cite class="ocri">
          1994 R.I. LEXIS 185
         </cite>
@@ -16483,9 +16483,9 @@
       <p>
        Suspension of writ,
        <cite class="ocri">
-        R.I. Const., art. I, § 9
+        R.I. Const., art. I
        </cite>
-       .
+       , § 9.
       </p>
      </div>
      <div>
@@ -18852,9 +18852,9 @@
         </cite>
         challenging his child molestation convictions; the prisoner did not receive ineffective assistance of counsel as guaranteed by
         <cite class="ocri">
-         R.I. Const. art. I, § 10
+         R.I. Const. art. I
         </cite>
-        , as evidence of the victim’s contradictory statements was entered into evidence without calling two witnesses. Young v. State, 877 A.2d 625,
+        , § 10, as evidence of the victim’s contradictory statements was entered into evidence without calling two witnesses. Young v. State, 877 A.2d 625,
         <cite class="ocri">
          2005 R.I. LEXIS 135
         </cite>
@@ -18880,9 +18880,9 @@
         </cite>
         did not show that trial counsel was ineffective, pursuant to U.S. Const. amend. VI and
         <cite class="ocri">
-         R.I. Const. art. I, § 10
+         R.I. Const. art. I
         </cite>
-        , for: (1) failing to request a self-defense or accident jury instruction; (2) failing to conduct a proper pretrial investigation; or (3) substantially interfering with the applicant’s right to testify when counsel informed the applicant that she would not participate in the applicant committing perjury. Larngar v. Wall, 918 A.2d 850,
+        , § 10, for: (1) failing to request a self-defense or accident jury instruction; (2) failing to conduct a proper pretrial investigation; or (3) substantially interfering with the applicant’s right to testify when counsel informed the applicant that she would not participate in the applicant committing perjury. Larngar v. Wall, 918 A.2d 850,
         <cite class="ocri">
          2007 R.I. LEXIS 37
         </cite>
@@ -18975,9 +18975,9 @@
         </cite>
         motion for postconviction relief, there was no need to address whether counsel’s representation was deficient in the context of U.S. Const. amend. VI and
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 10. Brown v. State, 964 A.2d 516,
+        , § 10. Brown v. State, 964 A.2d 516,
         <cite class="ocri">
          2009 R.I. LEXIS 16
         </cite>
@@ -22537,9 +22537,9 @@
       <p>
        Persons entitled to vote,
        <cite class="ocri">
-        R.I. Const., art. II, § 1
+        R.I. Const., art. II
        </cite>
-       .
+       , § 1.
       </p>
      </div>
     </div>
@@ -24669,9 +24669,9 @@
       <p>
        Constitutional provision as to relief of debtors,
        <cite class="ocri">
-        R.I. Const., Art. I, § 11
+        R.I. Const., Art. I
        </cite>
-       .
+       , § 11.
       </p>
       <p>
        Marginal notation on execution as to cause of action, §
@@ -27096,9 +27096,9 @@
        <p>
         Because justices of the Supreme Court of Rhode Island were no longer elected, they were no longer subject to the prohibition in
         <cite class="ocri">
-         R.I. Const. art. III, § 6
+         R.I. Const. art. III
         </cite>
-        against serving another government; therefore, a private citizen could not proceed with a petition in equity in the nature of quo warranto challenging the chief justice’s right to remain in office after agreeing to serve on a military review panel as part of the federal government’s war on terror. McKenna v. Williams, 874 A.2d 217,
+        , § 6 against serving another government; therefore, a private citizen could not proceed with a petition in equity in the nature of quo warranto challenging the chief justice’s right to remain in office after agreeing to serve on a military review panel as part of the federal government’s war on terror. McKenna v. Williams, 874 A.2d 217,
         <cite class="ocri">
          2005 R.I. LEXIS 113
         </cite>
@@ -30333,9 +30333,9 @@
        <p>
         This section did not violate
         <cite class="ocri">
-         R.I. Const., Art.
+         R.I. Const., Art. 1
         </cite>
-        1, § 10, or the due process clause of U.S. Const., Amend. 14. Vaughan v. Furlong,
+        , § 10, or the due process clause of U.S. Const., Amend. 14. Vaughan v. Furlong,
         <cite class="ocri">
          12 R.I. 127
         </cite>
