--- a/transforms/ri/ocri/r70/gov.ri.code.title.11.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.11.html
@@ -16160,9 +16160,9 @@
        <p>
         This statute is not unconstitutional under
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 16, but is a proper exercise of the police power. State v. Read,
+        , § 16, but is a proper exercise of the police power. State v. Read,
         <cite class="ocri">
          12 R.I. 137
         </cite>
@@ -22134,9 +22134,9 @@
        <p>
         This section does not violate
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, §§ 6, 10 or 14. State v. Gaines,
+        , §§ 6, 10 or 14. State v. Gaines,
         <cite class="ocri">
          32 R.I. 462
         </cite>
@@ -22462,9 +22462,9 @@
        <p>
         P.L. 1899, ch. 652, prohibiting entirely the use of trading-stamps, had no relation to the public health, safety, or morals, and interfered with the right of an individual to make contracts regarding sale and disposition of his own property in violation of U.S. Const., amend. XIV, § 1, and
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 10. State v. Dalton,
+        , § 10. State v. Dalton,
         <cite class="ocri">
          22 R.I. 77
         </cite>
@@ -25422,9 +25422,9 @@
         </cite>
         § 11-22-2(3), on its face, operates as an unconstitutional prior restraint on speech because it grants a local official unbridled discretion to approve or deny sign postings on even private property that overlaps with a public highway right of way. As currently constructed, § 11-22-2(3) is not sufficiently narrow and violates the First Amendment, and concomitantly,
         <cite class="ocri">
-         R.I. Const. art. I, § 21
+         R.I. Const. art. I
         </cite>
-        . Driver v. Town of Richmond, 570 F. Supp. 2d 269, 2008 U.S. Dist. LEXIS 58485 (D.R.I. 2008).
+        , § 21. Driver v. Town of Richmond, 570 F. Supp. 2d 269, 2008 U.S. Dist. LEXIS 58485 (D.R.I. 2008).
        </p>
        <p>
         Perennial political candidate was entitled to partial summary judgment on liability because the removal of his political signs from roadside locations by a police chief violated his rights of free speech and he was entitled to declaratory relief on his claim that
@@ -26449,9 +26449,9 @@
         </cite>
         , defendant may be denied bail under
         <cite class="ocri">
-         R.I. Const., art. I, § 9
+         R.I. Const., art. I
         </cite>
-        even for crimes not enumerated in this section where death or life imprisonment could possibly be imposed as penalties for the crime committed. Fountaine v. Mullen,
+        , § 9 even for crimes not enumerated in this section where death or life imprisonment could possibly be imposed as penalties for the crime committed. Fountaine v. Mullen,
         <cite class="ocri">
          117 R.I. 262
         </cite>
@@ -26604,9 +26604,9 @@
        <p>
         Although first-degree murder and second-degree murder constitute the “same offense” under Rhode Island law, the defendant’s retrial for second-degree murder, the lesser-included offense, following his acquittal on the charge of first-degree murder, did not violate his constitutional rights against double jeopardy embodied in
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 7, and the Fifth Amendment to the United States Constitution, since first-degree murder also requires proof of premeditation of more than a momentary duration and proof of deliberation, whereas second-degree murder does not, thus satisfying the applicable “same evidence” test. State v. Grabowski, 644 A.2d 1282,
+        , § 7, and the Fifth Amendment to the United States Constitution, since first-degree murder also requires proof of premeditation of more than a momentary duration and proof of deliberation, whereas second-degree murder does not, thus satisfying the applicable “same evidence” test. State v. Grabowski, 644 A.2d 1282,
         <cite class="ocri">
          1994 R.I. LEXIS 196
         </cite>
@@ -27301,9 +27301,9 @@
         </cite>
         such that defendant’s sentences did not violate the prohibition against double jeopardy in
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 7. State v. Rodriguez, 822 A.2d 894,
+        , § 7. State v. Rodriguez, 822 A.2d 894,
         <cite class="ocri">
          2003 R.I. LEXIS 113
         </cite>
@@ -28362,9 +28362,9 @@
        <p>
         Although first-degree murder is the only crime which carries a mandatory life sentence under this section, defendant may be denied bail pursuant to
         <cite class="ocri">
-         R.I. Const., art. I, § 9
+         R.I. Const., art. I
         </cite>
-        even for crimes where death or life imprisonment could possibly be imposed as penalties for the crime committed. Fountaine v. Mullen,
+        , § 9 even for crimes where death or life imprisonment could possibly be imposed as penalties for the crime committed. Fountaine v. Mullen,
         <cite class="ocri">
          117 R.I. 262
         </cite>
@@ -32431,9 +32431,9 @@
        <p>
         This chapter is not an impairment of the obligation of contracts in violation of
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 12, but is a valid exercise of the police power which can affect contracts of individuals. Creditors' Serv. Corp. v. Cummings,
+        , § 12, but is a valid exercise of the police power which can affect contracts of individuals. Creditors' Serv. Corp. v. Cummings,
         <cite class="ocri">
          57 R.I. 291
         </cite>
@@ -34255,9 +34255,9 @@
        <p>
         This chapter does not violate
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 3
         </cite>
-        3 by usurpation by the legislature of judicial power, since the chapter was passed to aid the judicial power and does not grant any right to practice law. Creditors' Serv. Corp. v. Cummings,
+        by usurpation by the legislature of judicial power, since the chapter was passed to aid the judicial power and does not grant any right to practice law. Creditors' Serv. Corp. v. Cummings,
         <cite class="ocri">
          57 R.I. 291
         </cite>
@@ -34270,9 +34270,9 @@
        <p>
         Collecting corporation in suit to enjoin enforcement of this chapter could not question constitutionality of chapter under
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 10, since that section is applicable only to the rights of the accused in criminal prosecutions. Creditors' Serv. Corp. v. Cummings,
+        , § 10, since that section is applicable only to the rights of the accused in criminal prosecutions. Creditors' Serv. Corp. v. Cummings,
         <cite class="ocri">
          57 R.I. 291
         </cite>
@@ -35727,9 +35727,9 @@
        <p>
         The provision permitting testimony as to reputation does not violate the confrontation requirement contained in
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 10. State v. Waldron,
+        , § 10. State v. Waldron,
         <cite class="ocri">
          16 R.I. 191
         </cite>
@@ -37539,9 +37539,9 @@
        <p>
         An indictment or complaint under this statute violates due process afforded by U.S. Const., amend. 14 and
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 10 where it does not aver that the defendant knew the officer to be an officer when he obstructed him. State v. Drew,
+        , § 10 where it does not aver that the defendant knew the officer to be an officer when he obstructed him. State v. Drew,
         <cite class="ocri">
          112 R.I. 129
         </cite>
@@ -40802,9 +40802,9 @@
        <p>
         Participant monitoring of phone conversations does not entail a significant invasion of privacy so as to violate
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 6. State v. Ahmadjian, 438 A.2d 1070,
+        , § 6. State v. Ahmadjian, 438 A.2d 1070,
         <cite class="ocri">
          1981 R.I. LEXIS 1423
         </cite>
@@ -46165,9 +46165,9 @@
        <p>
         Defendant’s sentence for second-degree child molestation of 20 years, with 15 years to be served at the Adult Correctional Institutions and the other five years suspended, did not constituted cruel and unusual punishment under U.S. Const. amend. VIII or
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 8 because the sentence fell within the range set out in
+        , § 8 because the sentence fell within the range set out in
         <cite class="ocri">
          R.I. Gen. Laws
         </cite>
@@ -60304,9 +60304,9 @@
         </cite>
         , prohibiting loud noise in certain locations, because (1) the ordinance did not conflict with the statutes but, rather, furthered the policy of the general assembly as stated in the statutes by creating a specific standard for a particular set of devices in a specific area, (2) the general assembly did not intend to completely occupy the field of noise regulation, and (3)
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 13
         </cite>
-        13 allowed local governments to regulate noise in residential areas. State ex rel. City of Providence v. Auger, 44 A.3d 1218,
+        allowed local governments to regulate noise in residential areas. State ex rel. City of Providence v. Auger, 44 A.3d 1218,
         <cite class="ocri">
          2012 R.I. LEXIS 72
         </cite>
@@ -61490,9 +61490,9 @@
         </cite>
         such that defendant’s sentences did not violate the prohibition against double jeopardy in
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 7. State v. Rodriguez, 822 A.2d 894,
+        , § 7. State v. Rodriguez, 822 A.2d 894,
         <cite class="ocri">
          2003 R.I. LEXIS 113
         </cite>
@@ -61795,9 +61795,9 @@
        <p>
         Imposition of two consecutive terms of life imprisonment for first-degree murder and using a firearm while committing a crime of violence resulting in death did not violate Eighth Amendment or
         <cite class="ocri">
-         R.I. Const. art. I, § 8
+         R.I. Const. art. I
         </cite>
-        ; the sentence imposed was mandatory and the crime was precisely that type the Legislature intended to address when it provided for a mandatory consecutive life sentence for using a firearm while committing murder. State v. Monteiro, 924 A.2d 784,
+        , § 8; the sentence imposed was mandatory and the crime was precisely that type the Legislature intended to address when it provided for a mandatory consecutive life sentence for using a firearm while committing murder. State v. Monteiro, 924 A.2d 784,
         <cite class="ocri">
          2007 R.I. LEXIS 81
         </cite>
@@ -61829,9 +61829,9 @@
        <p>
         Defendant’s consecutive life sentence for using a firearm to commit second-degree murder did not violate the Eighth Amendment or
         <cite class="ocri">
-         R.I. Const. art. I, § 8
+         R.I. Const. art. I
         </cite>
-        because (1) no violation had been found in the context of first-degree murder, and that holding did not depend on the classification of murder, and (2) the legislature intended the sentence to apply to crimes such as defendant’s. Linde v. State, 78 A.3d 738,
+        , § 8 because (1) no violation had been found in the context of first-degree murder, and that holding did not depend on the classification of murder, and (2) the legislature intended the sentence to apply to crimes such as defendant’s. Linde v. State, 78 A.3d 738,
         <cite class="ocri">
          2013 R.I. LEXIS 135
         </cite>
@@ -61857,9 +61857,9 @@
         </cite>
         such that defendant’s sentences did not violate the prohibition against double jeopardy in
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 7. State v. Rodriguez, 822 A.2d 894,
+        , § 7. State v. Rodriguez, 822 A.2d 894,
         <cite class="ocri">
          2003 R.I. LEXIS 113
         </cite>
@@ -63258,9 +63258,9 @@
         </cite>
         such that defendant’s sentences did not violate the prohibition against double jeopardy in
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 7. State v. Rodriguez, 822 A.2d 894,
+        , § 7. State v. Rodriguez, 822 A.2d 894,
         <cite class="ocri">
          2003 R.I. LEXIS 113
         </cite>
@@ -64739,9 +64739,9 @@
         </cite>
         by the Rhode Island Department of the Attorney General because: (1) the application did not have an impact on the right of the people to keep and bear arms under
         <cite class="ocri">
-         R.I. Const. art. I, § 2
+         R.I. Const. art. I
         </cite>
-        ; and (2)
+        , § 2; and (2)
         <cite class="ocri">
          R.I. Gen. Laws
         </cite>
@@ -72834,9 +72834,9 @@
        <p>
         In a prosecution for video voyeurism, as a reasonable inference could be drawn from the facts alleged in a detective’s affidavit that defendant would take home the easily transportable digital camera he used to take photos beneath a child’s skirt, a warrant to search defendant’s home for cameras was supported by probable cause under U.S. Const. amend. IV and
         <cite class="ocri">
-         R.I. Const. art. I, § 6
+         R.I. Const. art. I
         </cite>
-        . Therefore, photographic images of the child found on a camera seized pursuant to the warrant were admissible. State v. Byrne, 972 A.2d 633,
+        , § 6. Therefore, photographic images of the child found on a camera seized pursuant to the warrant were admissible. State v. Byrne, 972 A.2d 633,
         <cite class="ocri">
          2009 R.I. LEXIS 78
         </cite>
