--- a/transforms/ri/ocri/r70/gov.ri.code.title.12.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.12.html
@@ -7506,9 +7506,9 @@
       <p>
        Constitutional protection against unreasonable search,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 1
        </cite>
-       1, § 6.
+       , § 6.
       </p>
       <p>
        Cruelty to animals, search warrants, §
@@ -19371,9 +19371,9 @@
        <p>
         Indictment for embezzlement which alleged generally all essential elements of crime without specifying any particulars did not violate
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 10 or the due process clause of U.S. Const., amend. 14, even though such indictment did not give notice of the time when the offense was committed. State v. Davis,
+        , § 10 or the due process clause of U.S. Const., amend. 14, even though such indictment did not give notice of the time when the offense was committed. State v. Davis,
         <cite class="ocri">
          39 R.I. 276
         </cite>
@@ -20190,9 +20190,9 @@
       <p>
        Admission to bail, when required,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 1
        </cite>
-       1, § 9.
+       , § 9.
       </p>
       <p>
        Civil process, bail of persons imprisoned on, §
@@ -20215,9 +20215,9 @@
       <p>
        Excessive bail prohibited,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 1
        </cite>
-       1, § 8.
+       , § 8.
       </p>
       <p>
        Extradition proceedings, bail, §
@@ -21101,9 +21101,9 @@
       <p>
        Constitutional right to speedy trial,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 1
        </cite>
-       1, § 10.
+       , § 10.
       </p>
      </div>
      <div>
@@ -24374,9 +24374,9 @@
       <p>
        Constitutional rights of accused,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 1
        </cite>
-       1, § 10.
+       , § 10.
       </p>
       <p>
        Incompetency to stand trial, criminally insane persons, §
@@ -24980,9 +24980,9 @@
       <p>
        Constitutional right to compulsory process,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 1
        </cite>
-       1, § 10.
+       , § 10.
       </p>
       <p>
        Witnesses, §
@@ -25938,9 +25938,9 @@
         </cite>
         (a)(5), the trial court did not abuse its discretion or violate defendant’s confrontation rights under U.S. Const. amend. VI and
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 10 by reading to the jury prior recorded testimony provided by the witness in a matter that had resulted in a mistrial; although initial attempts to obtain immunity for the witness pursuant to
+        , § 10 by reading to the jury prior recorded testimony provided by the witness in a matter that had resulted in a mistrial; although initial attempts to obtain immunity for the witness pursuant to
         <cite class="ocri">
          R.I. Gen. Laws
         </cite>
@@ -29994,9 +29994,9 @@
        <p>
         This section, preventing the court from mitigating a sentence of mandatory life imprisonment, did not violate
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 10 guaranteeing the right of allocution. State v. Vaccaro,
+        , § 10 guaranteeing the right of allocution. State v. Vaccaro,
         <cite class="ocri">
          121 R.I. 788
         </cite>
@@ -31685,9 +31685,9 @@
         </cite>
         is consistent with the requirement of
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 8, that the punishment should be in proportion to the offense. The statute reflects the legislature’s determination that a third or subsequent offense is more serious than a first or second offense and accordingly should be punishable as such. State v. Tregaskis, 540 A.2d 1022,
+        , § 8, that the punishment should be in proportion to the offense. The statute reflects the legislature’s determination that a third or subsequent offense is more serious than a first or second offense and accordingly should be punishable as such. State v. Tregaskis, 540 A.2d 1022,
         <cite class="ocri">
          1988 R.I. LEXIS 69
         </cite>
