--- a/transforms/ri/ocri/r70/gov.ri.code.title.13.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.13.html
@@ -6831,9 +6831,9 @@
       <p>
        Reprieves by governor,
        <cite class="ocri">
-        R.I. Const., Art. IX, § 4
+        R.I. Const., Art. IX
        </cite>
-       .
+       , § 4.
       </p>
      </div>
      <div>
@@ -8010,9 +8010,9 @@
         </cite>
         , was properly denied where trials would have been commenced within the 180-day period except that continuances were required, which were found to be both necessary and reasonable, due to defendant’s demands to have new counsel appointed, to have the judge recused, and due to his uncooperativeness in returning to the State of Rhode Island; accordingly, denial of dismissal for violation of the Act and for an alleged violation of his right to a speedy trial, under
         <cite class="ocri">
-         R.I. Const. art. I, § 10
+         R.I. Const. art. I
         </cite>
-        , was proper. State v. Werner, 831 A.2d 183,
+        , § 10, was proper. State v. Werner, 831 A.2d 183,
         <cite class="ocri">
          2003 R.I. LEXIS 145
         </cite>
