--- a/transforms/ri/ocri/r70/gov.ri.code.title.14.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.14.html
@@ -1621,9 +1621,9 @@
        <p>
         Pursuant to
         <cite class="ocri">
-         R.I. Const. art. I, § 7
+         R.I. Const. art. I
         </cite>
-        , dismissal of the separate cases brought against the defendants, in the Superior Court and in the District Court, respectively, would not be proper despite the fact that those courts did not have jurisdiction over the defendants because they were only 17-years-old at the time they committed the alleged offenses. Rather, the proper thing to do would be to transfer those cases to the court having exclusive original jurisdiction, which was the Family Court pursuant to
+        , § 7, dismissal of the separate cases brought against the defendants, in the Superior Court and in the District Court, respectively, would not be proper despite the fact that those courts did not have jurisdiction over the defendants because they were only 17-years-old at the time they committed the alleged offenses. Rather, the proper thing to do would be to transfer those cases to the court having exclusive original jurisdiction, which was the Family Court pursuant to
         <cite class="ocri">
          R.I. Gen. Laws
         </cite>
