--- a/transforms/ri/ocri/r70/gov.ri.code.title.15.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.15.html
@@ -21319,9 +21319,9 @@
         </cite>
         , there was sufficient evidence of unfitness to terminate their parental rights; the parents’ due process and self-incrimination rights under U.S. Const. amend. V and
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 13 were not violated. In re Rosalie H., 889 A.2d 199,
+        , § 13 were not violated. In re Rosalie H., 889 A.2d 199,
         <cite class="ocri">
          2005 R.I. LEXIS 218
         </cite>
