--- a/transforms/ri/ocri/r70/gov.ri.code.title.16.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.16.html
@@ -8802,16 +8802,16 @@
       <p>
        Constitutional provision as to permanent fund,
        <cite class="ocri">
-        R.I. Const., art. XII, § 2
+        R.I. Const., art. XII
        </cite>
-       .
+       , § 2.
       </p>
       <p>
        Donations, application,
        <cite class="ocri">
-        R.I. Const., art. XII, § 3
+        R.I. Const., art. XII
        </cite>
-       .
+       , § 3.
       </p>
       <p>
        General treasurer as custodian of fund, §
@@ -56330,13 +56330,13 @@
       <li id="t16c63s16-63-2ol1a">
        The general assembly, in accordance with the constitution of the state,
        <cite class="ocri">
-        R.I. Const., Art. XII, § 1
+        R.I. Const., Art. XII
        </cite>
-       , which obligates the state “to secure to the people the advantages and opportunities of education,” and also pursuant to
+       , § 1, which obligates the state “to secure to the people the advantages and opportunities of education,” and also pursuant to
        <cite class="ocri">
-        R.I. Const., Art. XII, § 4
+        R.I. Const., Art. XII
        </cite>
-       , which requires it to “make all necessary provisions by law for carrying this article into effect,” finds:
+       , § 4, which requires it to “make all necessary provisions by law for carrying this article into effect,” finds:
        <ol>
         <li id="t16c63s16-63-2ol1a1">
          That all citizens, regardless of age, have the right to education;
