--- a/transforms/ri/ocri/r70/gov.ri.code.title.17.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.17.html
@@ -338,9 +338,9 @@
       <p>
        Constitutional provisions as to election and terms of officers,
        <cite class="ocri">
-        R.I. Const., art. IV, § 1
+        R.I. Const., art. IV
        </cite>
-       .
+       , § 1.
       </p>
       <p>
        Number of signers required to nominate subject to primary, §
@@ -591,9 +591,9 @@
        <p>
         A regularly scheduled statewide election constitutes a general election for purposes of
         <cite class="ocri">
-         R.I. Const. Art.
+         R.I. Const. Art. 14
         </cite>
-        14, § 1, even though state officers are not on the ballot. In 2008, an even-numbered year when the state’s general offices are not in contention, voters will cast their ballots for the President of the United States, a statewide and national election of no small significance. Bowen v. Mollis, 945 A.2d 314,
+        , § 1, even though state officers are not on the ballot. In 2008, an even-numbered year when the state’s general offices are not in contention, voters will cast their ballots for the President of the United States, a statewide and national election of no small significance. Bowen v. Mollis, 945 A.2d 314,
         <cite class="ocri">
          2008 R.I. LEXIS 47
         </cite>
@@ -1613,9 +1613,9 @@
       <p>
        Constitutional provisions as to election and terms of general assembly members,
        <cite class="ocri">
-        R.I. Const., art. IV, § 1
+        R.I. Const., art. IV
        </cite>
-       .
+       , § 1.
       </p>
       <p>
        Number of signers required to nominate subject to primary, §
@@ -6204,9 +6204,9 @@ RIGHT OF THE PEOPLE IN MEMBER STATES TO VOTE FOR PRESIDENT AND VICE PRESIDENT.
       <p>
        Permanent and uniform registration provisions,
        <cite class="ocri">
-        R.I. Const., art. II, § 2
+        R.I. Const., art. II
        </cite>
-       .
+       , § 2.
       </p>
      </div>
     </div>
@@ -17872,9 +17872,9 @@ RIGHT OF THE PEOPLE IN MEMBER STATES TO VOTE FOR PRESIDENT AND VICE PRESIDENT.
       <p>
        Constitutional date,
        <cite class="ocri">
-        R.I. Const., art. IV, § 1
+        R.I. Const., art. IV
        </cite>
-       .
+       , § 1.
       </p>
       <p>
        Exemption of voters from arrest on civil process, §§
@@ -23354,9 +23354,9 @@ RIGHT OF THE PEOPLE IN MEMBER STATES TO VOTE FOR PRESIDENT AND VICE PRESIDENT.
       <p>
        Constitutional basis for absentee voting,
        <cite class="ocri">
-        R.I. Const., Art. II, § 2
+        R.I. Const., Art. II
        </cite>
-       .
+       , § 2.
       </p>
       <p>
        Registration of shut-in voters, §
@@ -26290,9 +26290,9 @@ RIGHT OF THE PEOPLE IN MEMBER STATES TO VOTE FOR PRESIDENT AND VICE PRESIDENT.
       <p>
        Election by plurality,
        <cite class="ocri">
-        R.I. Const., Art. IV, § 2
+        R.I. Const., Art. IV
        </cite>
-       .
+       , § 2.
       </p>
      </div>
     </div>
