--- a/transforms/ri/ocri/r70/gov.ri.code.title.20.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.20.html
@@ -9346,9 +9346,9 @@
        <p>
         Former § 20-12-1 (requiring licenses for taking of lobsters) was a valid exercise of the police power and was not, by requiring a license, in violation of U.S. Const., Art. IV, § 2 or Amend. 14, or
         <cite class="ocri">
-         R.I. Const., Art. I, § 17
+         R.I. Const., Art. I
         </cite>
-        . State v. Kofines,
+        , § 17. State v. Kofines,
         <cite class="ocri">
          33 R.I. 211
         </cite>
@@ -11749,9 +11749,9 @@
      <p>
       Whereas,
       <cite class="ocri">
-       R.I. Const., Art. I, Sec. 17
+       R.I. Const., Art. I
       </cite>
-      , guarantees to the people the right to enjoy and freely exercise all rights of fishery, and imposes on the general assembly the responsibility to provide for the conservation of water, plant, and animal resources of the state; and
+      , Sec. 17, guarantees to the people the right to enjoy and freely exercise all rights of fishery, and imposes on the general assembly the responsibility to provide for the conservation of water, plant, and animal resources of the state; and
      </p>
      <p>
       Whereas, it is in the best public interest of the people and the state that the land and waters of the state, are utilized properly and effectively to produce plant and animal life; and
@@ -14267,9 +14267,9 @@
        <p>
         Fine of $20 for each bird unlawfully possessed was not so clearly excessive as to violate
         <cite class="ocri">
-         R.I. Const., Art. I, § 8
+         R.I. Const., Art. I
         </cite>
-        . In re Stone,
+        , § 8. In re Stone,
         <cite class="ocri">
          21 R.I. 14
         </cite>
