--- a/transforms/ri/ocri/r70/gov.ri.code.title.24.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.24.html
@@ -265,9 +265,9 @@
       <p>
        Taking of private property,
        <cite class="ocri">
-        R.I. Const., Art.
+        R.I. Const., Art. 1
        </cite>
-       1, § 16.
+       , § 16.
       </p>
      </div>
      <div>
@@ -7007,9 +7007,9 @@
        <p>
         The notice requirement in this section does not amount to an unconstitutional denial of access to the courts in violation of
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 5. Art. I, sec. 5 should not be interpreted to bar the Legislature from enacting any laws that may limit a party from bringing a claim in Rhode Island courts, and notice requirements that are imposed only on victims of governmental tortfeasors are rationally based and constitutionally valid. Hareld v. Napolitano, 615 A.2d 1015,
+        , § 5. Art. I, sec. 5 should not be interpreted to bar the Legislature from enacting any laws that may limit a party from bringing a claim in Rhode Island courts, and notice requirements that are imposed only on victims of governmental tortfeasors are rationally based and constitutionally valid. Hareld v. Napolitano, 615 A.2d 1015,
         <cite class="ocri">
          1992 R.I. LEXIS 203
         </cite>
@@ -9598,9 +9598,9 @@
       <p>
        Taking of private property,
        <cite class="ocri">
-        R.I. Const., Art.
+        R.I. Const., Art. 1
        </cite>
-       1, § 16.
+       , § 16.
       </p>
      </div>
      <div>
@@ -14254,7 +14254,11 @@
         </b>
        </h5>
        <p>
-        Although faith and credit of state are purportedly not pledged to the discharge of revenue bonds, the property of the state is so pledged and approval of the voters is required by R.I. Const., Amend. 31 (see now
+        Although faith and credit of state are purportedly not pledged to the discharge of revenue bonds, the property of the state is so pledged and approval of the voters is required by
+        <cite class="ocri">
+         R.I. Const., Amend. 31
+        </cite>
+        (see now
         <cite class="ocri">
          R.I. Const., art. VI
         </cite>
@@ -14275,7 +14279,11 @@
           24-12-40B
          </a>
         </cite>
-        but did not show that such approval would also authorize the issuance of revenue bonds under the provisions of this section, the issuance of such bonds was not approved as required by R.I. Const., Amend. 31. Opinion to Governor,
+        but did not show that such approval would also authorize the issuance of revenue bonds under the provisions of this section, the issuance of such bonds was not approved as required by
+        <cite class="ocri">
+         R.I. Const., Amend. 31
+        </cite>
+        . Opinion to Governor,
         <cite class="ocri">
          99 R.I. 351
         </cite>
@@ -15091,11 +15099,15 @@
         </b>
        </h5>
        <p>
-        The Jamestown bridge having outstanding obligations, it was a violation of R.I. Const., Amend. 31, § 1 (see now
+        The Jamestown bridge having outstanding obligations, it was a violation of
         <cite class="ocri">
-         R.I. Const., art. VI, § 16
+         R.I. Const., Amend. 31
         </cite>
-        ) for the state under the provisions of this section to take over the bridge and operate and maintain toll free. Opinion to Governor,
+        , § 1 (see now
+        <cite class="ocri">
+         R.I. Const., art. VI
+        </cite>
+        , § 16) for the state under the provisions of this section to take over the bridge and operate and maintain toll free. Opinion to Governor,
         <cite class="ocri">
          97 R.I. 200
         </cite>
