--- a/transforms/ri/ocri/r70/gov.ri.code.title.30.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.30.html
@@ -930,16 +930,16 @@
       <p>
        Captain general and commander in chief,
        <cite class="ocri">
-        R.I. Const., Art. IX, § 3
+        R.I. Const., Art. IX
        </cite>
-       .
+       , § 3.
       </p>
       <p>
        Subordination of military to civil authority,
        <cite class="ocri">
-        R.I. Const., Art. I, § 18
+        R.I. Const., Art. I
        </cite>
-       .
+       , § 18.
       </p>
      </div>
      <div>
@@ -2511,9 +2511,9 @@
       <p>
        Oaths of military officers,
        <cite class="ocri">
-        R.I. Const., Art. III, § 4
+        R.I. Const., Art. III
        </cite>
-       .
+       , § 4.
       </p>
      </div>
      <div>
