--- a/transforms/ri/ocri/r70/gov.ri.code.title.33.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.33.html
@@ -18794,9 +18794,9 @@
        <p>
         Commissioners appointed by probate court to hear contested claims against insolvent estates do not constitute a court within the meaning of
         <cite class="ocri">
-         R.I. Const., Art. X, § 1
+         R.I. Const., Art. X
         </cite>
-        . Mason v. Taft,
+        , § 1. Mason v. Taft,
         <cite class="ocri">
          23 R.I. 388
         </cite>
