--- a/transforms/ri/ocri/r70/gov.ri.code.title.34.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.34.html
@@ -5773,9 +5773,9 @@
       <p>
        Constitutional protection of shore rights,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 1
        </cite>
-       1, § 17.
+       , § 17.
       </p>
      </div>
      <div>
@@ -36678,9 +36678,9 @@
         </cite>
         , does not violate due process under the Fourteenth Amendment to the United States Constitution or
         <cite class="ocri">
-         R.I. Const. art.
+         R.I. Const. art. 1
         </cite>
-        1, § 2 because, despite the lack of a showing of extraordinary circumstances and ex parte judicial review of an affidavit, the procedural safeguards that
+        , § 2 because, despite the lack of a showing of extraordinary circumstances and ex parte judicial review of an affidavit, the procedural safeguards that
         <cite class="ocri">
          R.I. Gen. Laws
         </cite>
