--- a/transforms/ri/ocri/r70/gov.ri.code.title.37.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.37.html
@@ -9885,9 +9885,9 @@
        <p>
         This section does not delegate legislative authority in violation of
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 3
         </cite>
-        3, or art. 4, § 2. Pascale v. Capaldi,
+        , or art. 4, § 2. Pascale v. Capaldi,
         <cite class="ocri">
          95 R.I. 38
         </cite>
@@ -10079,9 +10079,9 @@
         </cite>
         when the owner relocated the pumps; thus, the eminent domain award was proper under
         <cite class="ocri">
-         R.I. Const. art. I, § 16
+         R.I. Const. art. I
         </cite>
-        . Cumberland Farms, Inc. v. DOT, 844 A.2d 152,
+        , § 16. Cumberland Farms, Inc. v. DOT, 844 A.2d 152,
         <cite class="ocri">
          2004 R.I. LEXIS 58
         </cite>
@@ -12311,9 +12311,9 @@
        <p>
         The statutory provisions in P. L. 1928, ch. 1175, § 2, for reconveyance of land condemned and for mitigation of damages by the amount of the value of the property reconveyed at the time of its conveyance, were in violation of the constitutional provision in
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 16 for payment of just compensation for property taken for public uses, when read with the constitutional provision by which all judicial power is vested in the courts. Reynolds v. State Bd. of Pub. Rds.,
+        , § 16 for payment of just compensation for property taken for public uses, when read with the constitutional provision by which all judicial power is vested in the courts. Reynolds v. State Bd. of Pub. Rds.,
         <cite class="ocri">
          59 R.I. 120
         </cite>
