--- a/transforms/ri/ocri/r70/gov.ri.code.title.39.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.39.html
@@ -18004,9 +18004,9 @@
        <p>
         Special 1912 law providing for taking of land for purpose of eliminating and altering grade crossings did not violate
         <cite class="ocri">
-         R.I. Const., art. I, § 16
+         R.I. Const., art. I
         </cite>
-        , in that it omitted provision for giving of security by the railroad corporation before entry upon the land, since this section was sufficient to meet the requirements of the Constitution. In re Pawtucket &amp; Cent. Falls Grade Crossing Comm'n,
+        , § 16, in that it omitted provision for giving of security by the railroad corporation before entry upon the land, since this section was sufficient to meet the requirements of the Constitution. In re Pawtucket &amp; Cent. Falls Grade Crossing Comm'n,
         <cite class="ocri">
          36 R.I. 200
         </cite>
@@ -27076,7 +27076,11 @@
         </b>
        </h5>
        <p>
-        Division of public utilities could authorize transfer of motor carrier certificate from resident of state to foreign corporation which had purchased same, despite provisions of this section and R.I. Const. amend. IX, § 1, requiring corporation to be created by special act of general assembly, where interstate commerce commission had issued an order approving the transfer. New England Greyhound Lines, Inc. v. Powers, 108 F. Supp. 953, 1952 U.S. Dist. LEXIS 1961 (D.R.I. 1952).
+        Division of public utilities could authorize transfer of motor carrier certificate from resident of state to foreign corporation which had purchased same, despite provisions of this section and
+        <cite class="ocri">
+         R.I. Const. amend. IX
+        </cite>
+        , § 1, requiring corporation to be created by special act of general assembly, where interstate commerce commission had issued an order approving the transfer. New England Greyhound Lines, Inc. v. Powers, 108 F. Supp. 953, 1952 U.S. Dist. LEXIS 1961 (D.R.I. 1952).
        </p>
       </div>
      </div>
