--- a/transforms/ri/ocri/r70/gov.ri.code.title.43.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.43.html
@@ -119,9 +119,9 @@
       <p>
        Enactment and style of laws,
        <cite class="ocri">
-        R.I. Const., Art. VI, Sec. 2
+        R.I. Const., Art. VI
        </cite>
-       .
+       , Sec. 2.
       </p>
      </div>
      <div>
@@ -308,9 +308,9 @@
       <p>
        Veto power of governor,
        <cite class="ocri">
-        R.I. Const., Art. IX, Sec. 14
+        R.I. Const., Art. IX
        </cite>
-       .
+       , Sec. 14.
       </p>
      </div>
      <div>
