--- a/transforms/ri/ocri/r70/gov.ri.code.title.46.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.46.html
@@ -3979,9 +3979,9 @@
         </cite>
         (see now
         <cite class="ocri">
-         R.I. Const., Art. VI, sec. 19
+         R.I. Const., Art. VI
         </cite>
-        ) are applicable to land taken for the construction of port facilities. Griffin v. Bendick, 463 A.2d 1340,
+        , sec. 19) are applicable to land taken for the construction of port facilities. Griffin v. Bendick, 463 A.2d 1340,
         <cite class="ocri">
          1983 R.I. LEXIS 1050
         </cite>
@@ -9818,9 +9818,9 @@
        <p>
         This chapter is not unconstitutional on the ground that it is an ex post facto law contrary to U.S. Const., Art. 1, § 9 or
         <cite class="ocri">
-         R.I. Const., Art.
+         R.I. Const., Art. 1
         </cite>
-        1, § 12, since chapter has purpose of discontinuing practices dangerous to the public health and looks to the future rather than to the past. Board of Purification of Waters v. East Providence,
+        , § 12, since chapter has purpose of discontinuing practices dangerous to the public health and looks to the future rather than to the past. Board of Purification of Waters v. East Providence,
         <cite class="ocri">
          47 R.I. 431
         </cite>
@@ -9833,9 +9833,9 @@
        <p>
         This chapter does not violate
         <cite class="ocri">
-         R.I. Const., Art.
+         R.I. Const., Art. 1
         </cite>
-        1, § 15 on the ground that town is deprived of trial by jury since a town has no constitutional right to trial by jury. Board of Purification of Waters v. East Providence,
+        , § 15 on the ground that town is deprived of trial by jury since a town has no constitutional right to trial by jury. Board of Purification of Waters v. East Providence,
         <cite class="ocri">
          47 R.I. 431
         </cite>
@@ -22534,9 +22534,9 @@
        <p>
         Indebtedness incurred under authority of paragraph (h) of this section is not an obligation of the state and is not subject to the limitation of art. 31, § 1, of the amendments to the state constitution (see now
         <cite class="ocri">
-         R.I. Const., Art. VI, Sec. 16
+         R.I. Const., Art. VI
         </cite>
-        ). Opinion to Governor,
+        , Sec. 16). Opinion to Governor,
         <cite class="ocri">
          107 R.I. 651
         </cite>
@@ -22892,9 +22892,9 @@
        <p>
         Bonds issued under authority of this section are not obligations of the state and are not subject to the restrictions of art. 31, § 1, of amendments of the state constitution (see now
         <cite class="ocri">
-         R.I. Const., Art. VI, Sec. 16
+         R.I. Const., Art. VI
         </cite>
-        ). Opinion to Governor,
+        , Sec. 16). Opinion to Governor,
         <cite class="ocri">
          107 R.I. 651
         </cite>
@@ -38896,9 +38896,9 @@
        <p>
         The right to a jury trial attaches under
         <cite class="ocri">
-         R.I. Const., art.
+         R.I. Const., art. 1
         </cite>
-        1, § 15 to a proceeding wherein the commission seeks the imposition or enforcement of a civil penalty. F. Ronci Co. v. Narragansett Bay Water Quality Management Dist. Comm'n, 561 A.2d 874,
+        , § 15 to a proceeding wherein the commission seeks the imposition or enforcement of a civil penalty. F. Ronci Co. v. Narragansett Bay Water Quality Management Dist. Comm'n, 561 A.2d 874,
         <cite class="ocri">
          1989 R.I. LEXIS 133
         </cite>
@@ -42634,9 +42634,9 @@
       <li id="t46c31.1s46-31.1-1ol12">
        Pursuant to the provisions of
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 1
        </cite>
-       1, § 17, it is the duty of the general assembly to provide for the conservation of the air, land, water, plant, animal, mineral, and other natural resources of the state; and to adopt all means necessary and proper by law to protect the natural environment of the people of the state by providing adequate resource planning for the control and regulation of the use of the natural resources of the state; and for the preservation, regeneration, and restoration of the natural environment of the state.
+       , § 17, it is the duty of the general assembly to provide for the conservation of the air, land, water, plant, animal, mineral, and other natural resources of the state; and to adopt all means necessary and proper by law to protect the natural environment of the people of the state by providing adequate resource planning for the control and regulation of the use of the natural resources of the state; and for the preservation, regeneration, and restoration of the natural environment of the state.
       </li>
       <li id="t46c31.1s46-31.1-1ol13">
        It is in the best interest of the state and its citizens to preserve, protect, and restore our bays, rivers, and associated watersheds.
