--- a/transforms/ri/ocri/r70/gov.ri.code.title.22.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.22.html
@@ -329,9 +329,9 @@
       <p>
        Constitutional formula for composition of senate,
        <cite class="ocri">
-        R.I. Const., art. VIII, § 1
+        R.I. Const., art. VIII
        </cite>
-       .
+       , § 1.
       </p>
       <p>
        Election of members, §
@@ -345,9 +345,9 @@
       <p>
        Presiding officer of senate,
        <cite class="ocri">
-        R.I. Const., art. VIII, § 2
+        R.I. Const., art. VIII
        </cite>
-       .
+       , § 2.
       </p>
       <p>
        Vacancies in office, §
@@ -804,9 +804,9 @@
         </cite>
         was less than 10 percent, the actual deviations were de minimis for purposes of a claim by voters and residents that the redistricting resulted in invidious discrimination under U.S. Const. amend. XIV so as to require justification by Rhode Island; there was no equal protection violation shown and no extremely close violation for purposes of finding the redistricting legislation unconstitutional under the compactness requirement of
         <cite class="ocri">
-         R.I. Const. art. VIII, § 1
+         R.I. Const. art. VIII
         </cite>
-        . Parella v. Montalbano, 899 A.2d 1226,
+        , § 1. Parella v. Montalbano, 899 A.2d 1226,
         <cite class="ocri">
          2006 R.I. LEXIS 104
         </cite>
@@ -831,9 +831,9 @@
         </cite>
         with proof beyond a reasonable doubt that the redistricting resulted in a violation of the Compactness Clause of
         <cite class="ocri">
-         R.I. Const. art. VIII, § 1
+         R.I. Const. art. VIII
         </cite>
-        ; the principles of compactness and continguity were not violated, there was no political gerrymandering, each district had communities of interest, there was no unlawful populaton deviations, and the redistricting overall was reasonable and rational. Parella v. Montalbano, 899 A.2d 1226,
+        , § 1; the principles of compactness and continguity were not violated, there was no political gerrymandering, each district had communities of interest, there was no unlawful populaton deviations, and the redistricting overall was reasonable and rational. Parella v. Montalbano, 899 A.2d 1226,
         <cite class="ocri">
          2006 R.I. LEXIS 104
         </cite>
@@ -842,9 +842,9 @@
        <p>
         “Compactness” as used in
         <cite class="ocri">
-         R.I. Const. art. VIII, § 1
+         R.I. Const. art. VIII
         </cite>
-        referred to more than geography for purposes of determining that it was met by the redistricting plan encompassed within
+        , § 1 referred to more than geography for purposes of determining that it was met by the redistricting plan encompassed within
         <cite class="ocri">
          R.I. Gen. Laws
         </cite>
@@ -1042,9 +1042,9 @@
       <p>
        Constitutional formula for composition of house,
        <cite class="ocri">
-        R.I. Const., art. VII, § 1
+        R.I. Const., art. VII
        </cite>
-       .
+       , § 1.
       </p>
       <p>
        Election of members, §
@@ -1997,9 +1997,9 @@
       <p>
        Secretary of senate,
        <cite class="ocri">
-        R.I. Const., Art. VI, Sec. 4
+        R.I. Const., Art. VI
        </cite>
-       .
+       , Sec. 4.
       </p>
       <p>
        Sheriff’s attendance, §
@@ -2105,9 +2105,9 @@
       <p>
        Constitutional provisions for organization of house,
        <cite class="ocri">
-        R.I. Const., Art. V, Sec. 2
+        R.I. Const., Art. V
        </cite>
-       .
+       , Sec. 2.
       </p>
      </div>
     </div>
@@ -2294,9 +2294,9 @@
       <p>
        Administration of oath of office,
        <cite class="ocri">
-        R.I. Const., Art. IX, Sec. 5
+        R.I. Const., Art. IX
        </cite>
-       ; §
+       , Sec. 5; §
        <cite class="ocri">
         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c01s36-1-2" target="_blank">
          36-1-2
@@ -2307,9 +2307,9 @@
       <p>
        Oaths of members of general assembly,
        <cite class="ocri">
-        R.I. Const., Art. IX, Sec. 4
+        R.I. Const., Art. IX
        </cite>
-       .
+       , Sec. 4.
       </p>
      </div>
     </div>
@@ -2766,9 +2766,9 @@
       <p>
        Constitutional immunities,
        <cite class="ocri">
-        R.I. Const., Art. IV, Sec. 5
+        R.I. Const., Art. IV
        </cite>
-       .
+       , Sec. 5.
       </p>
       <p>
        Exemption from jury service, §
@@ -10706,9 +10706,9 @@
       <p>
        Right to petition for redress of grievances,
        <cite class="ocri">
-        R.I. Const., Art. I, § 21
+        R.I. Const., Art. I
        </cite>
-       .
+       , § 21.
       </p>
      </div>
      <div>
