--- a/transforms/ri/ocri/r70/gov.ri.code.title.32.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.32.html
@@ -1716,12 +1716,9 @@
         </cite>
         , §§ 2, 15 or 16, or
         <cite class="ocri">
-         <cite class="ocri">
-          R.I. Const., Art. I
-         </cite>
-         V, § 2
+         R.I. Const., Art. I
         </cite>
-        , or U.S. Const., Amend. XIV. In re Opinion of Justices,
+        V, § 2, or U.S. Const., Amend. XIV. In re Opinion of Justices,
         <cite class="ocri">
          34 R.I. 191
         </cite>
@@ -1783,12 +1780,9 @@
         </cite>
         , §§ 2, 15 or 16, or
         <cite class="ocri">
-         <cite class="ocri">
-          R.I. Const., Art. I
-         </cite>
-         V, § 2
+         R.I. Const., Art. I
         </cite>
-        , or U.S. Const., Amend. XIV. In re Opinion of Justices,
+        V, § 2, or U.S. Const., Amend. XIV. In re Opinion of Justices,
         <cite class="ocri">
          34 R.I. 191
         </cite>
