--- a/transforms/ri/ocri/r70/gov.ri.code.title.35.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.35.html
@@ -10408,9 +10408,9 @@
         </cite>
         , § 1 (see now
         <cite class="ocri">
-         R.I. Const., art. VI, § 16
+         R.I. Const., art. VI
         </cite>
-        ). Opinion to Governor,
+        , § 16). Opinion to Governor,
         <cite class="ocri">
          112 R.I. 139
         </cite>
