--- a/transforms/ri/ocri/r70/gov.ri.code.title.36.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.36.html
@@ -288,9 +288,9 @@
       <p>
        Administration of oaths to general officers,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 9
        </cite>
-       9, § 5.
+       , § 5.
       </p>
       <p>
        Assistant attorneys-general, oaths of, §
@@ -331,9 +331,9 @@
       <p>
        Constitutional provisions for oaths,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 9
        </cite>
-       9, §§ 3, 4.
+       , §§ 3, 4.
       </p>
       <p>
        General assembly members, engagement, §
@@ -347,9 +347,9 @@
       <p>
        General officers, oaths,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 9
        </cite>
-       9, § 3.
+       , § 3.
       </p>
       <p>
        Judges, engagement of office, §
@@ -486,9 +486,9 @@
       <p>
        Constitutional provision,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 9
        </cite>
-       9, § 8.
+       , § 8.
       </p>
       <p>
        Duties of secretary of state, §
@@ -706,9 +706,9 @@
       <p>
        Impeachment of officers,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 11
        </cite>
-       11.
+       .
       </p>
      </div>
      <div>
@@ -827,9 +827,9 @@
       <p>
        Filling of vacancies by governor,
        <cite class="ocri">
-        R.I. Const., art.
+        R.I. Const., art. 9
        </cite>
-       9, § 5.
+       , § 5.
       </p>
      </div>
      <div>
@@ -7749,9 +7749,9 @@
       <p>
        Constitutional provision as to compensation of governor and lieutenant-governor,
        <cite class="ocri">
-        R.I. Const., art. IX, § 11
+        R.I. Const., art. IX
        </cite>
-       .
+       , § 11.
       </p>
      </div>
     </div>
@@ -7799,9 +7799,9 @@
       <p>
        Compensation of general assembly members and other officers,
        <cite class="ocri">
-        R.I. Const., art. VI, § 3
+        R.I. Const., art. VI
        </cite>
-       .
+       , § 3.
       </p>
       <p>
        Salary of attorney-general as full payment, §
@@ -21778,9 +21778,9 @@
         </cite>
         which reduced the state’s contribution to retired state employees’ health benefits did not violate the contracts clauses in
         <cite class="ocri">
-         R.I. Const. art. I, § 12
+         R.I. Const. art. I
         </cite>
-        or U.S. Const. art. I, § 10 because the state and the state’s employees had no contract when the changes took effect, as (1) a prior collective bargaining agreement (CBA) between the state and the employees had been validly terminated pursuant to the CBA’s terms, (2) any continuing employee rights did not exist by virtue of the CBA, and (3) the CBA did not vest health benefits in employees who had not retired. Rhode Island Council 94 v. Rhode Island, 705 F. Supp. 2d 165, 2010 U.S. Dist. LEXIS 36582 (D.R.I. 2010).
+        , § 12 or U.S. Const. art. I, § 10 because the state and the state’s employees had no contract when the changes took effect, as (1) a prior collective bargaining agreement (CBA) between the state and the employees had been validly terminated pursuant to the CBA’s terms, (2) any continuing employee rights did not exist by virtue of the CBA, and (3) the CBA did not vest health benefits in employees who had not retired. Rhode Island Council 94 v. Rhode Island, 705 F. Supp. 2d 165, 2010 U.S. Dist. LEXIS 36582 (D.R.I. 2010).
        </p>
        <p>
         When amendments to
@@ -21795,9 +21795,9 @@
         </cite>
         reduced the state’s contribution to retired state employees’ health benefits, a union and state employees who had not retired did not show that the amendments violated the takings clauses in
         <cite class="ocri">
-         R.I. Const. art. I, § 16
+         R.I. Const. art. I
         </cite>
-        and U.S. Const. amend. V because no valid contract bound the state to benefits affected by the amendments, as the state’s collective bargaining agreement with the state’s employees had been terminated. Rhode Island Council 94 v. Rhode Island, 705 F. Supp. 2d 165, 2010 U.S. Dist. LEXIS 36582 (D.R.I. 2010).
+        , § 16 and U.S. Const. amend. V because no valid contract bound the state to benefits affected by the amendments, as the state’s collective bargaining agreement with the state’s employees had been terminated. Rhode Island Council 94 v. Rhode Island, 705 F. Supp. 2d 165, 2010 U.S. Dist. LEXIS 36582 (D.R.I. 2010).
        </p>
       </div>
       <div>
@@ -24052,9 +24052,9 @@
         </cite>
         violates a constitutional imperative or a provision of the Ethics Code, this chapter, must be evaluated with the same factors used in analyzing violations of the directive of
         <cite class="ocri">
-         R.I. Const., art. III, § 7
+         R.I. Const., art. III
         </cite>
-        that public officials and employees avoid the appearance of impropriety. Town of Lincoln v. Lincoln Lodge No. 22, 660 A.2d 710,
+        , § 7 that public officials and employees avoid the appearance of impropriety. Town of Lincoln v. Lincoln Lodge No. 22, 660 A.2d 710,
         <cite class="ocri">
          1995 R.I. LEXIS 178
         </cite>
@@ -24415,9 +24415,9 @@
         </cite>
         violates a constitutional imperative or a provision of the Ethics Code, this chapter, must be evaluated with the same factors used in analyzing violations of the directive of
         <cite class="ocri">
-         R.I. Const., art. III, § 7
+         R.I. Const., art. III
         </cite>
-        that public officials and employees avoid the appearance of impropriety. Town of Lincoln v. Lincoln Lodge No. 22, 660 A.2d 710,
+        , § 7 that public officials and employees avoid the appearance of impropriety. Town of Lincoln v. Lincoln Lodge No. 22, 660 A.2d 710,
         <cite class="ocri">
          1995 R.I. LEXIS 178
         </cite>
